[project]
name = "dummy-cli-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
typer = "^0.15.1"
tabulate = "^0.9.0"
serial = "^0.0.97"
pystruct = "^0.3.2"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
